# datadog-static-analyzer

./: .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  FAQ.md  LICENSE  LICENSE-3rdparty.csv  Makefile.toml  NOTICE  README.md  RULESETS.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  patch.patch  release.sh  result-2.sarif  server-requests.http  versions.json
.autoresearch/: README.md  all-rulesets.json  runs.jsonl  (+1 more)
bins/: Cargo.toml
cli/: Cargo.toml
cli/src/: config_file.rs  constants.rs  csv.rs  datadog_utils.rs  file_utils.rs  lib.rs  rule_utils.rs  sarif_utils.rs
cli/src/model/: cli_configuration.rs  config_file.rs  datadog_api.rs
cli/src/sarif/: sarif_utils.rs
crates/bins/: Cargo.toml
crates/bins/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/resources/test/test_files_by_size/: versions.json
crates/cli/src/: config_file.rs  constants.rs  csv.rs  datadog_utils.rs  file_utils.rs  git_utils.rs  lib.rs  model.rs  path_restrictions.rs  path_trie.rs  rule_utils.rs  sarif.rs  secrets.rs  utils.rs  violations_table.rs
crates/cli/src/model/: cli_configuration.rs  config_file.rs  datadog_api.rs  serialization.rs
crates/cli/src/sarif/: sarif_utils.rs
crates/sbom/: Cargo.toml
crates/sbom/src/: analyzers.rs  lib.rs  model.rs
crates/sbom/src/analyzers/: analyzer.rs  jvm_pom.rs
crates/sbom/src/cyclonedx/: generate.rs
crates/sbom/src/model/: dependency.rs  ecosystem.rs
crates/secrets/: Cargo.toml
crates/secrets-core/: Cargo.toml
crates/secrets-core/src/: capture.rs  checker.rs  common.rs  engine.rs  lib.rs  location.rs  matcher.rs  rule.rs  rule_evaluator.rs  validator.rs  worker.rs
crates/secrets-core/src/checker/: boolean_logic.rs  regex.rs
crates/secrets-core/src/matcher/: hyperscan.rs
crates/secrets-core/src/matcher/hyperscan/: builder.rs  hs_matcher.rs  pattern.rs  pattern_set.rs  scratch.rs  transform.rs
crates/secrets-core/src/validator/: http.rs
crates/secrets/src/: check.rs  file_mgmt.rs  lib.rs  model.rs  proximity.rs  rule_file.rs  scanner.rs  secret_files.rs  temp_integration_test.rs  validator.rs
crates/secrets/src/check/: entropy.rs  simple.rs
crates/secrets/src/model/: secret_result.rs  secret_rule.rs
crates/secrets/src/rule_file/: check.rs  common.rs  file.rs  matcher.rs  template.rs  validator.rs
crates/secrets/src/rule_file/testdata/valid/: full.yml
crates/secrets/src/rule_file/validator/: http.rs
crates/secrets/src/validator/: http.rs
crates/static-analysis-kernel/: Cargo.toml  build.rs
crates/static-analysis-kernel/src/: analysis.rs  arguments.rs  classifiers.rs  config.rs  config_file.rs  constants.rs  lib.rs  model.rs  path_restrictions.rs  rule_config.rs  rule_overrides.rs
crates/static-analysis-kernel/src/analysis/: analyze.rs  combined_query.rs  ddsa_lib.rs  file_context.rs  generated_content.rs  javascript.rs  js_literal_miner.rs  languages.rs  literal_index.rs  tree_sitter.rs
crates/static-analysis-kernel/src/analysis/ddsa_lib/: bridge.rs  common.rs  context.rs  extension.rs  js.rs  ops.rs  resource_watchdog.rs  runtime.rs  test_utils.rs  v8_ds.rs  v8_platform.rs
crates/static-analysis-kernel/src/analysis/ddsa_lib/bridge/: context.rs  query_match.rs  ts_node.rs  ts_symbol_map.rs  violation.rs
crates/static-analysis-kernel/src/analysis/ddsa_lib/context/: file.rs  file_go.rs  file_js.rs  file_tf.rs  root.rs  rule.rs  ts_lang.rs
crates/static-analysis-kernel/src/analysis/ddsa_lib/js/: __bootstrap.js  capture.js  capture.rs  context_file.js  context_file.rs  context_file_go.js  context_file_go.rs  context_file_js.js  context_file_js.rs  context_file_tf.js  context_file_tf.rs  context_root.js  context_root.rs  context_rule.js  context_rule.rs  context_ts_lang.js  context_ts_lang.rs  ddsa.js  ddsa.rs  dx_cursor.js  dx_go.js  edit.js  edit.rs  fix.js  fix.rs  flow.rs  globals.d.js  query_match.js  query_match.rs  query_match_compat.js  query_match_compat.rs  region.js  region.rs  stella_compat.js  stella_compat.rs  test_helpers.js  ts_node.js  ts_node.rs  utility.js  utility.rs  (+2 more)
crates/static-analysis-kernel/src/analysis/file_context/: common.rs  go.rs
crates/static-analysis-kernel/src/analysis/js/: bootstrap.js  stella.js
crates/static-analysis-kernel/src/analysis/languages/: csharp.rs  java.rs  typescript.rs
crates/static-analysis-kernel/src/analysis/languages/csharp/: methods.rs  using_directives.rs
crates/static-analysis-kernel/src/analysis/languages/go/: imports.rs  methods.rs
crates/static-analysis-kernel/src/analysis/languages/java/: imports.rs  methods.rs
crates/static-analysis-kernel/src/analysis/languages/javascript/: imports.rs  methods.rs
crates/static-analysis-kernel/src/classifiers/: tests.rs
crates/static-analysis-kernel/src/config/: common.rs  conversion.rs  file_legacy.rs  file_v1.rs  file_v2.rs
crates/static-analysis-kernel/src/model/: analysis.rs  common.rs  config_file.rs  rule.rs  rule_test.rs  ruleset.rs  violation.rs
crates/static-analysis-server/: Cargo.toml
crates/static-analysis-server/src/: constants.rs  model.rs  request.rs  tree_sitter_tree.rs
crates/static-analysis-server/src/model/: analysis_request.rs  secret_scan.rs  tree_sitter_tree_node.rs  tree_sitter_tree_request.rs  violation.rs
crates/vectorscan-sys/: Cargo.toml  README.md  build.rs  hs.h
crates/vectorscan-sys/src/: bindings_ch.rs  bindings_hs.rs  hyperscan_bindings_ch.rs  hyperscan_bindings_hs.rs  lib.rs
kernel/: Cargo.toml  build.rs
kernel/src/: constants.rs  utils.rs
kernel/src/analysis/: analyze.rs  javascript.rs  tree_sitter.rs
kernel/src/analysis/js/: stella.js
kernel/src/model/: analysis.rs  common.rs  rule.rs  ruleset.rs  violation.rs
server/: Cargo.toml
server/src/: analysis.rs  constants.rs  lib.rs  model.rs  request.rs  server.rs  tree_sitter_tree.rs
server/src/model/: analysis_request.rs  analysis_response.rs  request.rs  response.rs  tree_sitter_tree_node.rs  tree_sitter_tree_request.rs  tree_sitter_tree_response.rs  violation.rs
(+156 files in other folders)
