[workspace]
members = ["crates/*"]
default-members = [
    "crates/bins",
    "crates/cli",
    "crates/static-analysis-kernel",
    "crates/static-analysis-server",
    "crates/secrets"
]
resolver = "2"

[workspace.package]
version = "0.3.6"

[profile.release]
lto = true

[workspace.dependencies]
anyhow = "1"
base64 = "0.21.2"
indexmap = { version = "2.2", features = ["serde"] }
itertools = "0.12.1"
derive_builder = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-sarif = "0.4"
serde_yaml = "0.9.21"
sha2 = "0.10.7"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }
