[workspace]
members = ["crates/*"]
default-members = [
    "crates/bins",
    "crates/cli",
    "crates/static-analysis-kernel",
    "crates/static-analysis-server",
    "crates/secrets",
]
resolver = "2"

[workspace.package]
version = "0.5.9"

[profile.release]
lto = true

[profile.release-dev]
inherits = "release"
lto = false
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[workspace.dependencies]
anyhow = "1"
base64 = "0.21.2"
dashmap = "6.1.0"
git2 = "0.19.0"
indexmap = { version = "2.7", features = ["serde"] }
itertools = "0.14.0"
derive_builder = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"
serde-sarif = "0.4"
serde_yaml = "0.9.21"
sha2 = "0.10.7"
num_cpus = "1.15.0"
thiserror = "2.0.6"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["v4"] }
tree-sitter = "0.24.7"
