[package]
name = "datadog-static-analyzer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datadog-static-analyzer"

[[bin]]
name = "datadog-static-analyzer-test-ruleset"

[[bin]]
name = "datadog-export-rulesets"

[[bin]]
name = "datadog-static-analyzer-server"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]


[dependencies]
anyhow = "1"
cli = {path = "../cli"}
kernel = {path = "../kernel" }
server = {path = "../server"}
getopts = "0.2.21"
num_cpus = "1.15.0"
rayon = "1.7.0"
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde_json = "1.0.96"


# For linux and macos, we need the vendored ssl (especially
[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }
[target.'cfg(macos)'.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }
