[package]
name = "datadog-static-analyzer"
version.workspace = true
edition = "2021"

[[bin]]
name = "datadog-static-analyzer"

[[bin]]
name = "datadog-static-analyzer-test-ruleset"

[[bin]]
name = "datadog-export-rulesets"

[[bin]]
name = "datadog-static-analyzer-server"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
  "precommit-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
]

[dependencies]
# local
cli = { path = "../cli" }
kernel = { path = "../kernel" }
server = { path = "../server" }
# workspace
anyhow = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# other
getopts = "0.2.21"
num_cpus = "1.15.0"
indicatif = "0.17.6"
rayon = "1.7.0"
rocket = { version = "=0.5.0", features = ["json"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }


# For linux and macos, we need the vendored ssl
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
