[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# local
kernel = {path = "../kernel" }
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
# other
glob-match = "0.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_yaml = "0.9.21"
walkdir = "2.3.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
