[package]
name = "cli"
edition = "2021"
version.workspace = true

[dependencies]
# local
kernel = {path = "../kernel" }
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
# other
git2 = "0.17.2"
glob-match = "0.2.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_yaml = "0.9.21"
valico = "4.0.0"
walkdir = "2.3.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
