[package]
name = "kernel"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
sha2 = { workspace = true }

# other
deno_core = "0.208.0"
lazy_static = "1.4.0"
serde_v8 = "0.111.0"
tree-sitter = "0.20.10"

[build-dependencies]
cc="*"
