[package]
name = "kernel"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
sha2 = { workspace = true }

# other
deno_core = "0.233.0"
serde_v8 = "0.147.0"
tree-sitter = "0.20.10"
tree-sitter-swift = "=0.3.6"

[build-dependencies]
cc="*"
deno_core = "0.233.0"
