[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# local
kernel = {path = "../kernel" }
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
