[package]
name = "datadog-static-analyzer"
version.workspace = true
edition = "2021"

[[bin]]
name = "datadog-static-analyzer"

[[bin]]
name = "datadog-static-analyzer-test-ruleset"

[[bin]]
name = "datadog-export-rulesets"

[[bin]]
name = "datadog-static-analyzer-server"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
  "prepush-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
]

[features]
default = []


[dependencies]
# local
cli = { path = "../cli" }
kernel = { package = "static-analysis-kernel", path = "../static-analysis-kernel" }
server = { package = "static-analysis-server", path = "../static-analysis-server" }
secrets = { package = "secrets", path = "../secrets" }

# workspace
anyhow = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
# other
getopts = "0.2.21"
num_cpus = "1.15.0"
indicatif = "0.17.6"
rayon = "1.7.0"
rocket = { version = "=0.5.0", features = ["json"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
thiserror = "1"


# For linux and macos, we need the vendored ssl
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
