[package]
name = "datadog-static-analyzer"
version.workspace = true
edition = "2021"

[[bin]]
name = "datadog-static-analyzer"

[[bin]]
name = "datadog-static-analyzer-git-hook"

[[bin]]
name = "datadog-static-analyzer-test-ruleset"

[[bin]]
name = "datadog-export-rulesets"

[[bin]]
name = "datadog-static-analyzer-server"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = [
  "prepush-hook",
  "run-cargo-test",
  "run-cargo-clippy",
  "run-cargo-fmt",
]

[features]
default = []


[dependencies]
# local
cli = { path = "../cli" }
common = { package = "common", path = "../common" }
kernel = { package = "static-analysis-kernel", path = "../static-analysis-kernel" }
server = { package = "static-analysis-server", path = "../static-analysis-server" }
secrets = { package = "secrets", path = "../secrets" }

# workspace
anyhow = { workspace = true }
itertools = { workspace = true }
git2 = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
indexmap = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }

# other
dashmap = "6.1.0"
terminal-emoji = "0.4.1"
getopts = "0.2.23"
indicatif = "0.18.0"
rayon = "1.11.0"
rocket = { version = "=0.5.0", features = ["json"] }
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "env-filter",
  "json",
] }
tracing-appender = "0.2"
pretty_yaml = "0.5"


# For linux and macos, we need the vendored ssl
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.72", features = ["vendored"] }
