[package]
name = "cli"
edition = "2021"
version.workspace = true

[dependencies]
# local
kernel = { package = "static-analysis-kernel", path = "../static-analysis-kernel" }
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
sha2 = { workspace = true }
# other
git2 = "0.18.0"
glob-match = "0.2.1"
percent-encoding = "2.3.1"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_yaml = "0.9.21"
tempfile = "3.10.0"
valico = "4.0.0"
walkdir = "2.3.3"

[dev-dependencies]
assert-json-diff = "2.0.2"
