[package]
name = "cli"
edition = "2021"
version.workspace = true

[features]
default = []

[dependencies]
# local
kernel = { package = "static-analysis-kernel", path = "../static-analysis-kernel" }
secrets = { package = "secrets", path = "../secrets" }
common = { package = "common", path = "../common" }
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
num_cpus = { workspace = true }
serde-sarif = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
# other
csv = "1.3.0"
path-slash = "0.2.1"
percent-encoding = "2.3.1"
prettytable-rs = "0.10.0"
# Default features are disabled to turn off "http2", "charset".
reqwest = { version = "0.12.22", default-features = false, features = ["default-tls", "macos-system-configuration", "blocking", "json"] }
valico = "4.0.0"
walkdir = "2.5.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
tempfile = "3.20.0"
