[package]
name = "sbom"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
kernel = { package = "static-analysis-kernel", path = "../static-analysis-kernel" }
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
sha2 = { workspace = true }
indexmap = { workspace = true }
tree-sitter = { workspace = true }

# other
serde-cyclonedx = "0.8.4"
regex = "1.10.4"


[build-dependencies]
cc = "1.0.97"
