[package]
name = "secrets-core"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["validator-http"]
validator-http = ["governor", "retry", "ureq", "url"]

[dependencies]
bstr = { version = "1.9.0", default-features = false, features = ["std"] }
governor = { version = "0.6.3", default-features = false, features = ["std", "jitter"], optional = true }
pcre2 = "0.2.6"
retry = { version = "2.0.0", default-features = false, features = ["random"], optional = true }
thiserror = "1.0.57"
ureq = { version = "2.9.6", default-features = false, features = ["tls"], optional = true }
url = { version = "2.5.0", optional = true }
vectorscan = { path = "../vectorscan" }