[package]
name = "secrets-core"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"

[features]
default = ["validator-http"]
validator-http = ["governor", "ureq", "url"]

[dependencies]
bstr = "1.9.1"
governor = { version = "0.6.3", default-features = false, features = ["std", "jitter"], optional = true }
pcre2 = "0.2.6"
thiserror = "1.0.57"
ureq = { version = "2.9.6", default-features = false, features = ["tls"], optional = true }
url = { version = "2.5.0", optional = true }
vectorscan = { path = "../vectorscan" }

[dev-dependencies]
httpmock = { version = "0.7.0", default-features = false }
