[package]
name = "secrets"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
anyhow = { workspace = true }
common = { package = "common", path = "../common" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

futures = "0.3.31"
lazy_static = "1.5.0"

# remote
dd-sds = { git = "https://github.com/DataDog/dd-sensitive-data-scanner.git", rev = "924c77a3036a31b5e36335c31f7daaf0ba90e00f" }
strum = "0.25.0"
