[package]
name = "secrets"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
anyhow = { workspace = true }
common = { package = "common", path = "../common" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

futures = "0.3.31"
lazy_static = "1.5.0"

# remote
dd-sds = { git = "https://github.com/DataDog/dd-sensitive-data-scanner.git", rev = "51fc3d11b6b24c9b1b1d74f8285b47c3d7faa253" }
strum = "0.25.0"
