[package]
name = "secrets"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
anyhow = { workspace = true }
common = { package = "common", path = "../common" }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

futures = "0.3.31"
lazy_static = "1.5.0"

# remote
dd-sds = { package = "dd-sensitive-data-scanner", git = "https://github.com/DataDog/dd-sensitive-data-scanner.git", rev = "b2dca51b27a87ecb2d847ad4167a0537afca1972" }
strum = "0.25.0"

[dev-dependencies]
httpmock = "0.7.0"
