[package]
name = "static-analysis-kernel"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
sha2 = { workspace = true }
indexmap = { workspace = true }

# other
deno_core = "0.283.0"
globset = "0.4.14"
sequence_trie = "0.3.6"
serde_yaml = "0.9.21"
serde_v8 = "0.107.0"
thiserror = "1.0.59"
tree-sitter = "0.22.6"

[build-dependencies]
cc = "1.0.97"
