[package]
name = "static-analysis-kernel"
edition = "2021"
version.workspace = true

[dependencies]
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
common = { package = "common", path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
derive_builder = { workspace = true }
serde-sarif = { workspace = true }
sha2 = { workspace = true }
indexmap = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }

# other
deno_core = "0.330.0"
globset = "0.4.14"
graphviz-rust = "0.9.0"
sequence_trie = "0.3.6"
serde_yaml = "0.9.21"
streaming-iterator = "0.1.9"

# We're experiencing issues with v8 130.0.8. Until we can resolve this, pin to the last-known-working.
v8 = "=130.0.7"

[build-dependencies]
cc = "1.2.12"
