[package]
name = "static-analysis-server"
edition = "2021"
version.workspace = true

[dependencies]
# local
common = { package = "common", path = "../common" }
kernel = { package = "static-analysis-kernel", path = "../static-analysis-kernel" }
secrets = { package = "secrets", path = "../secrets" }
# workspace
anyhow = { workspace = true }
base64 = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
