[package]
name = "vectorscan-sys"
version = "0.0.0"
license = "Apache-2.0"
categories = ["external-ffi-bindings"]
build = "build.rs"
edition = "2021"
links = "hs"

[build-dependencies]
bindgen = { version = "0.69.4", optional = true }
cmake = "0.1.50"

[features]
chimera = []
generate-bindings = ["bindgen"]

[lib]
doctest = false
